--- a/src/packages/deb/zookeeper.control/control
+++ b/src/packages/deb/zookeeper.control/control
@@ -17,7 +17,7 @@ Version: @version@
 Section: misc
 Priority: optional
 Architecture: all
-Depends: sun-java6-jre
-Maintainer: Apache Software Foundation <dev@zookeeper.apache.org>
+Depends: adduser
+Maintainer: Devteam <devteam@sagepay.com>
 Description: ZooKeeper is a centralized service for maintaining configuration information, naming, providing distributed synchronization, and providing group services.
 Distribution: development
